--- a/custom/default.custom.yaml
+++ b/custom/default.custom.yaml
@@ -1,6 +1,4 @@
 patch:
-  ascii_composer:
-    good_old_caps_lock: false  # true | false
-    switch_key:
-      Shift_L: noop  # commit_code | commit_text | inline_ascii | clear | noop
-      Shift_R: noop         # commit_code | commit_text | inline_ascii | clear | noop
+  ascii_composer/good_old_caps_lock: false  # true | false
+  ascii_composer/switch_key/Shift_L: noop   # commit_code | commit_text | inline_ascii | clear | noop
+  ascii_composer/switch_key/Shift_R: noop         # commit_code | commit_text | inline_ascii | clear | noop
